--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -115,3 +115,5 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
