--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,16 @@
 #  Configuration
 ###########################
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Plugins setups
+set -g @resurrect-strategy-nvim 'session'
+
+# Initialize plugin manager
+run '~/.tmux/plugins/tpm/tpm'
+
 # use 256 term for pretty colors
 set -g default-terminal "xterm-256color"
 
