--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,6 +51,9 @@ set -g renumber-windows on
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+bind -n End send-key C-e
+bind -n Home send-key C-a
+bind -n C-b send-key C-a
 
 # paste
 #unbind C-p
@@ -119,6 +122,8 @@ set -g status-fg white
 # highlight current window
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
+
+set-window-option -g xterm-keys on
 
 # set color of active pane
 set -g pane-border-fg colour235
