--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ bind-key -n M-9 select-window -t 9
 ###########################
 
 # enable UTF-8 support in status bar
-set -g status-utf8 on
+# set -g status-utf8 on
 
 # set refresh interval for status bar
 set -g status-interval 30
@@ -131,4 +131,7 @@ set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+# bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
