feat: actualize dotfiles config

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,46 +1,21 @@
-tap "devhubapp/devhub"
-tap "heroku/brew"
 tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/core"
-brew "sqlite"
+tap "homebrew/cask-fonts"
+brew "font-jetbrains-mono-nerd-font"
 brew "python"
 brew "ansible"
 brew "azure-cli"
 brew "bash"
 brew "cocoapods"
 brew "coreutils"
-brew "fzf"
+brew "fish"
 brew "git"
 brew "go"
 brew "haskell-stack"
-brew "jmeter"
-brew "libidn2"
-brew "libssh2"
-brew "libtermkey"
-brew "libuv"
-brew "maven"
 brew "neovim"
-brew "node"
 brew "nvm"
-brew "pcre"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "slowhttptest"
-brew "sonar-scanner"
 brew "terraform"
-brew "the_silver_searcher"
 brew "tmux"
-brew "unrar"
-brew "watchman"
 brew "wget"
-brew "yarn"
-brew "youtube-dl"
-brew "zlib"
-brew "zsh"
-brew "zsh-completions"
-brew "heroku/brew/heroku-node"
-brew "heroku/brew/heroku"
-cask "dash"
-cask "osxfuse"
-cask "devhubapp/devhub/devhub"
+cask "iterm2"
