--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,25 +1,22 @@
 ###########################
 #  Configuration
 ###########################
+unbind r
+bind r source-file ~/.tmux.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Plugins setups
 set -g @resurrect-strategy-nvim 'session'
 
-# Initialize plugin manager
-run '~/.tmux/plugins/tpm/tpm'
-
 # use 256 term for pretty colors
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
 
 # increase scroll-back history
 set -g history-limit 10000
-
-# use vim key bindings
-setw -g mode-keys vi
 
 # enable mouse
 setw -g mouse on
@@ -69,11 +66,13 @@ bind -n C-b send-key C-a
 #unbind ^J
 #bind ^J select-pane -t :.+
 
+# use vim key bindings
 # quickly switch panes
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+setw -g mode-keys vi
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key k select-pane -U
+bind-key j select-pane -D
 
 # switch windows alt+number
 bind-key -n M-1 select-window -t 1
@@ -118,20 +117,6 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
 # color status bar
 set -g status-bg colour235
 set -g status-fg white
-
-# highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
-
-set-window-option -g xterm-keys on
-
-# set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg black
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
-
-# bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
