feat: add new brew required packages

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,21 +1,25 @@
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
-brew "python"
 brew "ansible"
 brew "azure-cli"
 brew "bash"
 brew "cocoapods"
 brew "coreutils"
 brew "fish"
+brew "fzf"
 brew "git"
 brew "go"
 brew "haskell-stack"
+brew "lua-language-server"
 brew "neovim"
 brew "nvm"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "pyright"
+brew "python"
+brew "ripgrep"
 brew "terraform"
 brew "tmux"
 brew "wget"
-cask "iterm2"
 cask "font-jetbrains-mono-nerd-font"
+cask "iterm2"
