feat: enhance yaml editing. add missing brew packages

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/cask-fonts"
 brew "ansible"
 brew "azure-cli"
 brew "bash"
+brew "cmake"
 brew "cocoapods"
 brew "coreutils"
 brew "fish"
