feat: add theme for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,19 +4,36 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g @catppuccin_falvour 'mocha'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
 
 # Plugins setups
 set -g @resurrect-strategy-nvim 'session'
+
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # use 256 term for pretty colors
 # set -g default-terminal "xterm-256color"
 
 # increase scroll-back history
-set -g history-limit 10000
+set -g history-limit 50000
+
+# Increase tmux messages display duration from 750ms to 4s
+set -g display-time 4000
+
+# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
+set -g status-interval 5
+
+# Focus events enabled for terminals that support them
+set -g focus-events on
+
+# Super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
 
 # enable mouse
 setw -g mouse on
