feat: add new commands, add harpoon, add vimbegood

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,12 +3,14 @@ tap "homebrew/cask-fonts"
 brew "ansible"
 brew "azure-cli"
 brew "bash"
+brew "bat"
 brew "cmake"
 brew "cocoapods"
 brew "coreutils"
 brew "fish"
 brew "fzf"
 brew "git"
+brew "git-delta"
 brew "go"
 brew "haskell-stack"
 brew "lua-language-server"
