feat: update config

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,11 +7,13 @@ brew "bat"
 brew "cmake"
 brew "cocoapods"
 brew "coreutils"
+brew "derailed/k9s/k9s"
 brew "fish"
 brew "fzf"
 brew "git"
 brew "git-delta"
 brew "go"
+brew "hashicorp/tap/terraform-ls"
 brew "haskell-stack"
 brew "lua-language-server"
 brew "neovim"
