feat: nvim update, config tune up

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,7 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set-option -g status-position bottom
 set -g @catppuccin_falvour 'mocha'
 
 # List of plugins
