--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,13 +9,16 @@ brew "cocoapods"
 brew "coreutils"
 brew "derailed/k9s/k9s"
 brew "fish"
+brew "fd"
 brew "fzf"
 brew "git"
 brew "git-delta"
 brew "go"
+brew "golangci-lint"
 brew "hashicorp/tap/terraform-ls"
 brew "haskell-stack"
 brew "lua-language-server"
+brew "luarocks"
 brew "neovim"
 brew "nvm"
 brew "pyenv"
