feat: update packages

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -20,7 +20,9 @@ brew "haskell-stack"
 brew "lua-language-server"
 brew "luarocks"
 brew "neovim"
+brew "nss"
 brew "nvm"
+brew "mkcert"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "pyright"
