feat: switch to kitty terminal. clean up conflict bindings

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -31,5 +31,8 @@ brew "ripgrep"
 brew "terraform"
 brew "tmux"
 brew "wget"
+brew "yazi"
+cask "alacritty"
 cask "font-jetbrains-mono-nerd-font"
 cask "iterm2"
+cask "kitty"
